flaskapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: my-flask-image:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
