flaskapp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp
        image: my-flask-image:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
